--- a/Week-03/css/styles.css
+++ b/Week-03/css/styles.css
@@ -28,34 +28,6 @@ aside {
     height: 5500px;
     background-color: #D5DD3C
 }
-main {
-    position: absolute;
-    width: 1176px;
-    margin-left: 336px
-}
-footer {
-    position: absolute;
-    height: 148px;
-    width: 1512px;
-    margin-top: 5500px;
-    background-color: #323232
-}
-footer ul {
-    display: inline-block
-}
-nav {
-    margin-top: 50px;
-    margin-bottom: 150px
-}
-nav ul {
-    text-align: center;
-    line-height: 60px;
-    font-weight: bold;
-    font-size: 30px
-}
-nav ul li a {
-    color: #000
-}
 aside article {
     margin-top: 4900px
 }
@@ -70,6 +42,34 @@ aside article ul li a {
 }
 aside article ul li img {
     float: left
+}
+nav {
+    margin-top: 50px;
+    margin-bottom: 150px
+}
+nav ul {
+    text-align: center;
+    line-height: 60px;
+    font-weight: bold;
+    font-size: 30px
+}
+nav ul li a {
+    color: #000
+}
+main {
+    position: absolute;
+    width: 1176px;
+    margin-left: 336px
+}
+footer {
+    position: absolute;
+    height: 148px;
+    width: 1512px;
+    margin-top: 5500px;
+    background-color: #323232
+}
+footer ul {
+    display: inline-block
 }
 #rr-logo {
     width: 102px;
@@ -89,12 +89,12 @@ aside article ul li img {
     width: 150px;
     height: 30px;
     margin: 0 20px 0 10px;
-    padding: 0px 0 40px 0;
+    padding: 5px 5px 40px 5px;
     border-radius: 4px;
     background-color: #fff;
     font-size: 25px;
     text-transform: uppercase;
-    color: #000;
+    color: #000
 }
 .button-container img {
     position: relative;
@@ -106,7 +106,7 @@ aside article ul li img {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 864px;
+    height: 864px
 }
 #home-container {
     padding-top: 200px;
@@ -119,8 +119,9 @@ aside article ul li img {
     text-shadow: 2px 2px #000
 }
 #home-container h2 span {
-    position: absolute;
-    margin: 80px 0 0 -70px;
+    position: relative;
+    top: 100px;
+    right: 60px;
     color: #E3EC39;
     padding-top: 50px
 }
@@ -146,9 +147,8 @@ aside article ul li img {
     text-shadow: 2px 2px #000
 }
 .section-title span {
-    position: absolute;
-    margin: 50px 2px 0 -10px;
-    padding-top: 50px;
+    position: relative;
+    top: 80px;
     color: #E3EC39
 }
 .features-card-container {
@@ -167,25 +167,26 @@ aside article ul li img {
     padding-top: 40px;
     font-size: 50px;
     text-align: center;
-    color: #E3EC39
+    color: #E3EC39;
+    text-shadow: 2px 2px #000
 }
 .features-card p{
     padding-top: 50px;
     font-size: 20px;
     text-align: center
 }
-#features-reservations{
+.features-card-container article:nth-child(1){
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/reservations.png)
 }
-#features-schedule{
+.features-card-container article:nth-child(2){
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/schedule.jpg)
 }
-#features-memberships{
+.features-card-container article:nth-child(3){
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/membership.jpeg);
     position: relative;
     top: -50px
 }
-#features-contact{
+.features-card-container article:nth-child(4){
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/conttact-suggestions.png)
 }
 #contact-us {
@@ -200,25 +201,63 @@ aside article ul li img {
     border-radius: 20px;
     color: #000
 }
-#contact-form input, #contact-form select {
-    height: 25px;
-    margin-top: 30px;
-    background-color: #717171;
-    border-radius: 5px
-}
 #contact-form select {
     width: 145px
 }
-#contact-form fieldset {
+.form-up {
+    padding-top: 20px;
+    padding-left: 30px    
+}
+.form-up fieldset {
     display: inline-block;
-    padding-left: 20px
+    padding-left: 20px;
+    margin-left: 50px
+}
+.form-up fieldset p {
+    position: relative;
+    top: 20px
+}
+.form-up input, .form-up select {
+    height: 25px;
+    margin-top: 30px;
+    background-color: #dedede;
+    border: 1px solid #000;
+    border-radius: 5px
+}
+.form-up input::placeholder {
+    padding-left: 5px;
+}
+.form-down p {
+    padding-left: 100px;
+    padding-top: 15px
+}
+.form-down textarea {
+    width: 785px;
+    height: 100px;
+    margin-left: 100px;
+    margin-top: 20px;
+    background-color: #dedede;
+    border: 1px solid #000;
+    border-radius: 5px
+}
+.form-down textarea::placeholder {
+    padding-top: 12px;
+    padding-left: 10px;
+    font-family: 'Lato', sans-serif
+}
+.form-down button {
+    position: relative;
+    top: 50px;
+    right: 445px;
+    width: 74px;
+    height: 34px;
+    background-color: #D5DD3C;
+    border: 1px solid #000;
+    border-radius: 6px;
+    color: #000
 }
 #activities {
     height: 700px
-}
-#activities-2 {
-    padding-top: 10px;
-    margin-left: 75px
 }
 #activities-1 {
     margin-left: 250px;
@@ -232,6 +271,10 @@ aside article ul li img {
     text-align: center;
     text-shadow: 1px 1px #000
 }
+#activities-2 {
+    padding-top: 10px;
+    margin-left: 75px
+}
 #activities ul {
     display: inline-block
 }
@@ -243,19 +286,19 @@ aside article ul li img {
     background-size: cover;
     border-radius: 15px
 }
-#crossfit {
+#activities-1 li:nth-child(1) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Assets/Images/crossfit.jpg")
 }
-#box {
+#activities-1 li:nth-child(2){
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Assets/Images/boxing.png")
 }
-#functional {
+#activities-2 li:nth-child(1) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Assets/Images/functional.jpeg")
 }
-#spinning {
+#activities-2 li:nth-child(2) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Assets/Images/spinning.png")
 }
-#fitness {
+#activities-2 li:nth-child(3) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Assets/Images/fitness.jpg")
 }
 #memberships {
@@ -272,26 +315,27 @@ aside article ul li img {
 }
 .memberships-card h3 {
     padding-top: 50px;
-    font-size: 42px;
+    font-size: 38px;
     font-weight: bold;
     text-align: center;
-    color: #E3EC39
+    color: #E3EC39;
+    text-shadow: 2px 2px #000
 }
 .memberships-card p {
-    padding-top: 40px;
-    font-size: 25px;
+    padding-top: 60px;
+    font-size: 20px;
     text-align: center
 }
 #memberships-card-container {
     padding-top: 100px
 }
-#only-classes {
+#memberships-card-container article:nth-child(1) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("../../Assets/Images/only-classes.png")
 }
-#classic {
+#memberships-card-container article:nth-child(2) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("../../Assets/Images/classic.png")
 }
-#black {
+#memberships-card-container article:nth-child(3) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("../../Assets/Images/black.jpg")
 }
 #our-story {
@@ -307,10 +351,9 @@ aside article ul li img {
     text-shadow: 2px 2px #000
 }
 #our-story h2 span {
-    position: absolute;
-    margin: 50px 2px 0 -10px;
-    color: #E3EC39;
-    padding-top: 20px
+    position: relative;
+    top: 60px;
+    color: #E3EC39
 }
 #ourstory div {
     display: inline-block
