--- a/Week-04/css/common.css
+++ b/Week-04/css/common.css
@@ -1,8 +1,12 @@
 *{
     margin: 0;
-    padding: 0
+    padding: 0;
+}
+html {
+    font-size: 62.5%;
 }
 body {
+    width: 100vw;
     min-width: 390px;
     background-color: #535353;
     color: #fff;
