--- a/Week-04/css/header.css
+++ b/Week-04/css/header.css
@@ -2,6 +2,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
     min-height: 154px;
 }
 header .header-logo img{
@@ -12,7 +13,7 @@ header .header-logo h1{
     display: none;
     color: #E3EC39;
     font-weight: 700;
-    font-size: 40px;
+    font-size: 4rem;
     margin-left: 20px;
 }
 header .header-buttons .menu-icon{
@@ -32,13 +33,14 @@ header .header-buttons .menu-icon{
 }
 .button-container{
     display: none;
+    justify-content: space-between;
     width: 180px;
     height: 30px;
     margin: 0 20px;
     padding: 5%;
     border-radius: 4px;
     background-color: #fff;
-    font-size: 25px;
+    font-size: 2.5rem;
     text-transform: uppercase;
     color: #000
 }
