--- a/Week-04/css/main.css
+++ b/Week-04/css/main.css
@@ -1,6 +1,164 @@
-aside{
-    width: 20%;
+aside {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 22%;
+    background-color: #D5DD3C;
 }
-.main-container{
-    width: 80%;
+aside nav {
+    position: sticky;
+    margin-top: 5rem;
+}
+aside nav ul li {
+    text-align: center;
+    padding: 2.5rem 0;
+}
+aside nav ul li a {
+    color: #000;
+    font-size: 3rem;
+    font-weight: bold;
+}
+.main-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+#home {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Assets/Images/entrenamiento-personal.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    min-height: 690px;
+}
+#home-container {
+    display: flex;
+    width: 90%;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    flex-direction: column;
+    height: 16rem;
+}
+#home #home-container h2 {
+    display: flex;
+    flex-direction: column;
+    font-size: 6rem;
+    font-weight: bold;
+    text-shadow: 2px 2px #000
+}
+#home-container h2 span {
+    align-self: flex-end;
+    color: #E3EC39;
+}
+#home-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+    padding: 4rem 3rem;
+}
+#home-text p {
+    font-size: 2rem;
+    text-align: center;
+    padding: 3rem 1.5rem;
+}
+#features {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 1000px;
+}
+.section-title {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    margin-top: 30px;
+    font-size: 7rem;
+    font-weight: bold;
+    text-shadow: 2px 2px #000
+}
+.section-title span {
+    align-self: flex-end;
+    color: #E3EC39;
+}
+.features-card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 90%
+}
+.features-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    box-sizing: border-box;
+    height: 250px;
+    width: 100%;
+    margin: 20px 0;
+    padding: 20px;
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+}
+.features-card h3 {
+    font-size: 4rem;
+    font-weight: bold;
+    text-align: center;
+    color: #E3EC39;
+    text-shadow: 2px 2px #000
+}
+.features-card p{
+    padding-bottom: 20px;
+    font-size: 2rem;
+    text-align: center
+}
+.features-card-container article:nth-child(1){
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/reservations.png)
+}
+.features-card-container article:nth-child(2){
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/schedule.jpg)
+}
+.features-card-container article:nth-child(3){
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/membership.jpeg);
+}
+.features-card-container article:nth-child(4){
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/conttact-suggestions.png)
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+    #home #home-container h2 {
+        font-size: 10rem;
+    }
+    #home-text p{
+        font-size: 3rem;
+    }
+    .section-title {
+        font-size: 9rem;
+        width: 45%;
+    }
+}
+@media screen and (min-width: 1025px) {
+    aside{
+        display: flex;
+    }
+    .main-container{
+        width: 78%;
+    }
+    #home {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Assets/Images/dontsit.png");
+    }
+    #home-container{
+        width: 70%;
+    }
+    #home #home-container h2 {
+        font-size: 10rem;
+    }
+    #home-text p{
+        font-size: 3rem;
+    }
 }
