--- a/Week-04/css/main.css
+++ b/Week-04/css/main.css
@@ -29,29 +29,23 @@ aside nav ul li a {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Assets/Images/entrenamiento-personal.jpg");
+    background-image: linear-gradient(#00000080, #00000080), url("../../Assets/Images/entrenamiento-personal.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     min-height: 690px;
 }
-#home-container {
-    display: flex;
-    width: 90%;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    flex-direction: column;
-    height: 16rem;
-}
-#home #home-container h2 {
+#home h2 {
     display: flex;
     flex-direction: column;
+    width: 370px;
+    padding-top: 4%;
     font-size: 6rem;
     font-weight: bold;
     text-shadow: 2px 2px #000
 }
-#home-container h2 span {
+#home h2 span {
     align-self: flex-end;
     color: #E3EC39;
 }
@@ -72,13 +66,13 @@ aside nav ul li a {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    min-height: 1000px;
+    min-height: 900px;
 }
 .section-title {
     display: flex;
     flex-direction: column;
-    width: 60%;
-    margin-top: 30px;
+    width: 350px;
+    margin: 30px 0;
     font-size: 7rem;
     font-weight: bold;
     text-shadow: 2px 2px #000
@@ -111,7 +105,7 @@ aside nav ul li a {
     font-weight: bold;
     text-align: center;
     color: #E3EC39;
-    text-shadow: 2px 2px #000
+    text-shadow: 2px 2px #000000
 }
 .features-card p{
     padding-bottom: 20px;
@@ -119,19 +113,163 @@ aside nav ul li a {
     text-align: center
 }
 .features-card-container article:nth-child(1){
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/reservations.png)
+    background-image: linear-gradient(#00000080, #00000080), url(../../Assets/Images/reservations.png)
 }
 .features-card-container article:nth-child(2){
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/schedule.jpg)
+    background-image: linear-gradient(#00000080, #00000080), url(../../Assets/Images/schedule.jpg)
 }
 .features-card-container article:nth-child(3){
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/membership.jpeg);
+    background-image: linear-gradient(#00000080, #00000080), url(../../Assets/Images/membership.jpeg);
 }
 .features-card-container article:nth-child(4){
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../Assets/Images/conttact-suggestions.png)
+    background-image: linear-gradient(#00000080, #00000080), url(../../Assets/Images/conttact-suggestions.png)
+}
+#contact-us{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#contact-us form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    min-height: 450px;
+    background-color: #fff;
+    border-radius: 20px;
+    color: #000
+}
+.form-up, .form-down{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    height: 60%;
+}
+.form-up fieldset {
+    width: 100%;
+}
+.form-up p, .form-down p {
+    padding: 12px 0;
+    text-align: center;
+    font-size: 1.8rem;
+}
+.form-up input, .form-up select{
+    width: 100%;
+    height: 30px;
+    background-color: #dedede;
+    border: 1px solid #000;
+    border-radius: 5px
+}
+.form-up input::placeholder {
+    text-align: center;
+}
+.form-down textarea {
+    width: 100%;
+    margin-bottom: 10px;
+    background-color: #dedede;
+    border: none;
+    border-radius: 5px
+}
+.form-down textarea::placeholder {
+    padding-top: 12px;
+    padding-left: 10px;
+    font-family: 'Lato', sans-serif
+}
+.form-down button {
+    width: 74px;
+    height: 34px;
+    margin: 30px 0;
+    background-color: #D5DD3C;
+    border: 1px solid #000;
+    border-radius: 6px;
+    color: #000
+}
+#activities, #activities-1, #activities-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#activities-1, #activities-2 {
+    width: 100%;
+}
+#activities-1 li , #activities-2 li{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10px 0;
+    width: 90%;
+    height: 250px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 15px;
+    text-align: center;
+}
+#activities-1 h3 , #activities-2 h3 {
+    text-align: center;
+    font-size: 4rem;
+    font-weight: bold;
+    background-color: #00000080;
+    background-size: cover;
+}
+#activities-1 li:nth-child(1) {
+    background-image: linear-gradient(#00000080, #00000080), url("../../Assets/Images/crossfit.jpg")
+}
+#activities-1 li:nth-child(2){
+    background-image: linear-gradient(#00000080, #00000080), url("../../Assets/Images/boxing.png")
+}
+#activities-2 li:nth-child(1) {
+    background-image: linear-gradient(#00000080, #00000080), url("../../Assets/Images/functional.jpeg")
+}
+#activities-2 li:nth-child(2) {
+    background-image: linear-gradient(#00000080, #00000080), url("../../Assets/Images/spinning.png")
+}
+#activities-2 li:nth-child(3) {
+    background-image: linear-gradient(#00000080, #00000080), url("../../Assets/Images/fitness.jpg")
+}
+#memberships {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#memberships-card-container {
+    width: 90%;
+}
+.memberships-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 390px;
+    margin: 20px 0;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px
+}
+.memberships-card h3 {
+    color: #E3EC39;
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 2px 2px #000
+}
+.memberships-card p{
+    font-size: 2rem;
+    text-align: center;
+}
+#memberships article:nth-child(1) {
+    background-image: linear-gradient(#00000080, #000000CC), url("../../Assets/Images/only-classes.png")
+}
+#memberships article:nth-child(2) {
+    background-image: linear-gradient(#00000080, #000000CC), url("../../Assets/Images/classic.png")
+}
+#memberships article:nth-child(3) {
+    background-image: linear-gradient(#00000080, #000000CC), url("../../Assets/Images/black.jpg")
 }
 @media (min-width: 601px) and (max-width: 1024px) {
-    #home #home-container h2 {
+    #home h2 {
+        width: 580px;
         font-size: 10rem;
     }
     #home-text p{
@@ -139,7 +277,39 @@ aside nav ul li a {
     }
     .section-title {
         font-size: 9rem;
-        width: 45%;
+        width: 450px;
+    }
+    .features-card {
+        height: 450px;
+    }
+    .features-card h3, #activities-1 h3 , #activities-2 h3 {
+        font-size: 7rem;
+    }
+    .features-card p {
+        font-size: 4rem;
+    }
+    .form-up {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .form-up fieldset {
+        width: 50%;
+        box-sizing: border-box;
+        padding: 0 20px;
+    }
+    .form-up p, .form-up input::placeholder{
+        text-align: left;
+        padding-left: 10px;
+    }
+    .form-down {
+        width: 85%;
+    }
+    .form-down p {
+        align-self: flex-start;
+        padding-left: 10px;
+    }
+    #activities-1 li , #activities-2 li {
+        height: 400px;
     }
 }
 @media screen and (min-width: 1025px) {
@@ -150,15 +320,60 @@ aside nav ul li a {
         width: 78%;
     }
     #home {
-        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Assets/Images/dontsit.png");
+        background-image: linear-gradient(#00000080, #00000080), url("../../Assets/Images/dontsit.png");
     }
-    #home-container{
-        width: 70%;
-    }
-    #home #home-container h2 {
+    #home h2 {
+        width: 700px;
         font-size: 10rem;
     }
     #home-text p{
         font-size: 3rem;
+    }
+    .features-card-container {
+        flex-direction: row;
+    }
+    .features-card {
+        width: 45%;
+        height: 290px;
+        margin: 0;
+    }
+    .section-title {
+        font-size: 9rem;
+        width: 450px;
+    }
+    .form-up {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .form-up fieldset {
+        width: 25%;
+        box-sizing: border-box;
+        padding: 0 10px;
+    }
+    .form-up p, .form-up input::placeholder  {
+        text-align: left;
+        padding-left: 10px;
+    }
+    .form-down p {
+        align-self: flex-start;
+        padding-left: 10px;
+    }
+    #activities-1, #activities-2 {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    #activities-1 li , #activities-2 li {
+        width: 30%;
+        height: 200px;
+    }
+    #memberships-card-container {
+        width: 50%;
+    }
+    .memberships-card{
+        height: 575px;
+        margin: 40px 0;
+    }
+    .memberships-card h3 {
+        font-size: 4rem;
     }
 }
