--- a/Week-04/css/footer.css
+++ b/Week-04/css/footer.css
@@ -4,37 +4,40 @@ footer {
     align-items: center;
     width: 100%;
     min-height: 200px;
-    background-color: #C4C4C4;
+    background-color: #C4C4C4
 }
 #footer-icons-left {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;    
+    width: 50%
 }
 #footer-icons-left li {
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between
 }
 #footer-icons-left li a {
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 2rem;
     text-align: center;
     font-size: 2rem;
     color: #000000
 }
+#footer-icons-left li a:hover {
+    text-decoration: underline
+}
 #footer-icons-left li a img {
-    margin-bottom: 20px;
+    margin-bottom: 2rem
 }
 #footer-center {
     display: flex;
     justify-content: space-between;
-    padding: 30px 0;
-    width: 35rem;
+    padding: 3rem 0;
+    width: 35rem
 }
 #footer-center li a{
     display: flex;
@@ -45,21 +48,21 @@ footer {
     color: #000000
 }
 #footer-center li a img {
-    width: 4rem;
+    width: 4rem
 }
 #footer-rigth {
-    padding: 0 0 3rem 0;
+    padding: 0 0 3rem 0
 }
 #footer-rigth p {
     font-size: 1.8rem;
     text-align: center;
     color: #000000
 }
-@media (min-width: 601px) and (max-width: 1024px){
+@media (min-width: 601px) and (max-width: 1024px) {
     #footer-icons-left {
         flex-direction: row;
         justify-content: space-around;
-        width: 80%;
+        width: 80%
     }
 }
 @media screen and (min-width: 1025px) {
@@ -68,32 +71,32 @@ footer {
         align-items: center;
         justify-content: space-around;
         box-sizing: border-box;
-        background-color: #323232;
+        background-color: #323232
     }
     #footer-icons-left {
         flex-direction: row;
         justify-content: space-around;
-        width: 55%;
+        width: 55%
     }
     #footer-icons-left li a {
         flex-direction: row-reverse;
-        align-items: center;
+        align-items: center
     }
     #footer-icons-left li a img {
         width: 5rem;
-        margin: 0 0.5rem;
+        margin: 0 0.5rem
     }
     #footer-icons-left li a, #footer-center li a, #footer-rigth p {
         font-size: 1.8rem;
-        color: #ffffff;
+        color: #ffffff
     }
     #footer-center li a {
-        align-items: baseline;
+        align-items: baseline
     }
     #footer-rigth {
-        padding: 0;
+        padding: 0
     }
     #footer-rigth p {
-        font-size: 1.2rem;
+        font-size: 1.2rem
     }
 }
