--- a/Week-04/css/header.css
+++ b/Week-04/css/header.css
@@ -1,91 +1,95 @@
-header{
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
     width: 100%;
-    min-height: 154px;
+    min-height: 154px
 }
-header .header-logo img{
-    width: 100px;
-    margin-left: 30px;
+header .header-logo img {
+    width: 10rem;
+    margin-left: 3rem
 }
-header .header-logo h1{
+header .header-logo h1 {
     display: none;
-    color: #E3EC39;
-    font-weight: 700;
+    margin-left: 2rem;
     font-size: 4rem;
-    margin-left: 20px;
+    font-weight: 700;
+    color: #E3EC39
 }
-header .header-buttons .menu-icon{
+header .header-buttons .menu-icon {
     display: flex;
     justify-content: center;
     align-items: center;
     min-width: 50px;
     min-height: 40px;
-    margin-right: 40px;
-    margin-bottom: 25px;
+    margin-right: 4rem;
+    margin-bottom: 2.5rem;
     background-color: #E3EC39;
-    border-radius: 5%;
+    border-radius: 5%
 }
-.header-buttons{
+.header-buttons {
     display: flex;
     justify-content: space-around
 }
-.button-container{
+.button-container {
     display: none;
     justify-content: space-between;
     width: 180px;
     height: 30px;
-    margin: 0 20px;
+    margin: 0 2rem;
     padding: 5%;
     border-radius: 4px;
     background-color: #fff;
     font-size: 2.5rem;
     text-transform: uppercase;
-    color: #000
+    color: #000000
+}
+.button-container:hover {
+    font-size: 2.7rem;
+    cursor: pointer
 }
 @media screen and (min-width: 601px) and (max-width: 1024px) {
     header .header-logo h1{
         display: flex;
-        margin-bottom: 20px;
+        margin-bottom: 2rem
     }
-    header .header-logo h1 span{
-        display: none;
+    header .header-logo h1 span {
+        display: none
     }
     header .header-logo img {
         width: 140px;
-        margin-top: 30px;
-        margin-left: 85px;
+        margin-top: 3rem;
+        margin-left: 8.5rem
     }
     header .header-buttons .menu-icon {
         width: 90px;
         height: 80px;
-        margin-right: 80px;
+        margin-right: 8rem
     }
-    header .header-buttons .menu-icon img{
-        width: 80%;
+    header .header-buttons .menu-icon img {
+        width: 80%
     }
 }
 @media screen and (min-width: 1025px) {
-    header{
-        background-color: #323232;
+    header {
+        background-color: #323232
     }
-    header .header-logo img{
+    header .header-logo img {
         margin-left: 120px;
     }
-    .button-container{
+    .button-container {
+        display: flex
+    }
+    header .header-buttons .menu-icon {
+        display: none
+    }
+    header .header-logo h1 {
         display: flex;
+        margin-bottom: 20px
     }
-    header .header-buttons .menu-icon{
-        display: none;
-    }
-    header .header-logo h1{
-        display: flex;
-        margin-bottom: 20px;
-    }
-    header .header-logo h1 span{
+    header .header-logo h1 span {
         display: inline;
-        padding-left: 5px;
+        padding-left: 5px
     }
 }
