BaSP-W06-2023: Login.js

--- a/Week-06/css/login.css
+++ b/Week-06/css/login.css
@@ -6,7 +6,7 @@
   background-color: #e3ec39e6;
   border-radius: 3rem;
   width: 90%;
-  height: 40rem;
+  height: auto;
 }
 #form-login h4 {
   font-size: 2rem;
@@ -18,7 +18,7 @@
   font-size: 1.8rem;
   color: #e3ec39e6;
   padding: 0.7rem 1.5rem;
-  margin-top: 5rem;
+  margin: 5rem 0;
   border: none;
   border-radius: 0.5rem;
   cursor: pointer;
@@ -26,6 +26,7 @@
 .fieldset-login {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   padding-top: 3rem;
 }
 .fieldset-login label {
@@ -36,7 +37,6 @@
 .fieldset-login input {
   width: 25rem;
   height: 3rem;
-  border: 1px solid #000000;
   border-radius: 0.5rem;
 }
 .fieldset-login input::placeholder {
@@ -46,6 +46,23 @@
   font-size: 1.4rem;
   padding-top: 0.5rem;
   color: #000000;
+}
+.input-border {
+  border: 1px solid #000000;
+}
+.error-border {
+  border: 2px solid #ff0000;
+}
+.success-border {
+  border: 2px solid #00ff00;
+}
+#pass-error-p,
+#email-error-p {
+  display: flex;
+  flex-wrap: wrap;
+  width: 25rem;
+  font-size: 1.6rem;
+  color: #ff0000;
 }
 @media screen and (min-width: 1025px) {
   #form-login {
