--- a/Week-06/views/sign-up.html
+++ b/Week-06/views/sign-up.html
@@ -38,13 +38,13 @@
         <h1>MEGA ROCKET<span> S.A.</span></h1>
       </div>
       <div class="header-buttons">
+        <a href="./index.html" class="button-container">
+          Home
+          <img src="../../Assets/Logos/home-icon.png" alt="sign up icon" />
+        </a>
         <a href="./login.html" class="button-container">
           Login
           <img src="../../Assets/Logos/login-icon.png" alt="login icon" />
-        </a>
-        <a href="./signup.html" class="button-container">
-          Sign Up
-          <img src="../../Assets/Logos/signup-icon.png" alt="sign up icon" />
         </a>
         <a href="#" class="menu-icon">
           <img src="../../Assets/Logos/hamburger-logo.png" alt="menu-icon" />
