BaSP-W06-2023: finishing details

--- a/Week-06/views/sign-up.html
+++ b/Week-06/views/sign-up.html
@@ -56,7 +56,7 @@
       <form action="" id="form-sign-up">
         <h4>Register</h4>
         <div class="field-container">
-          <fieldset>
+          <fieldset id="field-name">
             <label for="reg-name">Name</label>
             <input
               type="text"
@@ -65,7 +65,7 @@
               placeholder="Your Name"
             />
           </fieldset>
-          <fieldset>
+          <fieldset id="field-surname">
             <label for="reg-surname">Surname</label>
             <input
               type="text"
@@ -74,7 +74,7 @@
               placeholder="Your Surname"
             />
           </fieldset>
-          <fieldset>
+          <fieldset id="field-dni">
             <label for="reg-dni">ID</label>
             <input
               type="text"
@@ -84,7 +84,7 @@
               placeholder="ID"
             />
           </fieldset>
-          <fieldset>
+          <fieldset id="field-date">
             <label for="reg-date-birth">Date of Birth</label>
             <input
               type="date"
@@ -93,7 +93,7 @@
               placeholder="Date of Birth"
             />
           </fieldset>
-          <fieldset>
+          <fieldset id="field-phone">
             <label for="reg-phone">Phone Number</label>
             <input
               type="text"
@@ -102,7 +102,7 @@
               placeholder="Phone Number"
             />
           </fieldset>
-          <fieldset>
+          <fieldset id="field-address">
             <label for="reg-address">Address</label>
             <input
               type="text"
@@ -111,7 +111,7 @@
               placeholder="Address"
             />
           </fieldset>
-          <fieldset>
+          <fieldset id="field-city">
             <label for="reg-city">City</label>
             <input
               type="text"
@@ -120,7 +120,7 @@
               placeholder="City"
             />
           </fieldset>
-          <fieldset>
+          <fieldset id="field-zip">
             <label for="reg-zip">Zip Code</label>
             <input
               type="text"
@@ -130,7 +130,7 @@
               placeholder="Zip Code"
             />
           </fieldset>
-          <fieldset>
+          <fieldset id="field-email">
             <label for="reg-email">E mail</label>
             <input
               type="text"
@@ -139,19 +139,19 @@
               placeholder="example@gmail.com"
             />
           </fieldset>
-          <fieldset>
+          <fieldset id="field-pass">
             <label for="reg-pass">Password</label>
             <input
-              type="text"
+              type="password"
               id="reg-pass"
               class="form-input"
               placeholder="*********"
             />
           </fieldset>
-          <fieldset>
+          <fieldset id="field-pass-repeat">
             <label for="reg-pass-repeat">Repeat Password</label>
             <input
-              type="text"
+              type="password"
               id="reg-pass-repeat"
               class="form-input"
               placeholder="*********"
