BaSP-W07-2023: sign-up js and some corrections

--- a/Week-07/views/sign-up.html
+++ b/Week-07/views/sign-up.html
@@ -53,7 +53,11 @@
       </div>
     </header>
     <main class="alt-main">
-      <form action="" id="form-sign-up">
+      <form
+        action="https://api-rest-server.vercel.app/signup"
+        method="get"
+        id="form-sign-up"
+      >
         <h4>Register</h4>
         <div class="field-container">
           <fieldset id="field-name">
