BaSP-W07-2023: html and css corrections

--- a/Week-07/css/sign-up.css
+++ b/Week-07/css/sign-up.css
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 90%;
   height: auto;
-  margin: 2rem 0;
+  margin: 2rem auto;
   background-color: #d9d9d9cc;
   border: none;
   border-radius: 0.3rem;
