--- a/Week-07/views/index.html
+++ b/Week-07/views/index.html
@@ -50,9 +50,17 @@
         </a>
       </div>
     </header>
-    <main>
+    <main class="main-container">
       <aside>
         <nav>
+          <ul class="mobile-links">
+            <li>
+              <a href="./login.html">LOGIN</a>
+            </li>
+            <li>
+              <a href="./sign-up.html">SIGN UP</a>
+            </li>
+          </ul>
           <ul>
             <li>
               <a href="#home">HOME</a>
@@ -75,7 +83,7 @@
           </ul>
         </nav>
       </aside>
-      <div class="main-container">
+      <div class="home-container">
         <section id="home">
           <h2>DON´T SIT<span>GET FIT</span></h2>
           <div id="home-text">
