--- a/Week-07/views/login.html
+++ b/Week-07/views/login.html
@@ -52,7 +52,19 @@
         </a>
       </div>
     </header>
-    <main class="alt-main">
+    <main class="alt-main main-container">
+      <aside class="aside-mobile">
+        <nav>
+          <ul class="mobile-links">
+            <li>
+              <a href="./index.html">HOME</a>
+            </li>
+            <li>
+              <a href="./sign-up.html">SIGN UP</a>
+            </li>
+          </ul>
+        </nav>
+      </aside>
       <form
         action="https://api-rest-server.vercel.app/login"
         method="get"
