--- a/Week-07/views/sign-up.html
+++ b/Week-07/views/sign-up.html
@@ -52,7 +52,19 @@
         </a>
       </div>
     </header>
-    <main class="alt-main">
+    <main class="alt-main main-container">
+      <aside class="aside-mobile">
+        <nav>
+          <ul class="mobile-links">
+            <li>
+              <a href="./index.html">HOME</a>
+            </li>
+            <li>
+              <a href="./login.html">LOGIN</a>
+            </li>
+          </ul>
+        </nav>
+      </aside>
       <form
         action="https://api-rest-server.vercel.app/signup"
         method="get"
@@ -164,7 +176,7 @@
         </div>
         <div class="form-button-container">
           <button type="submit" id="reg-button">Register</button>
-          <button>Cancel</button>
+          <button type="button" id="cancel-button">Cancel</button>
         </div>
       </form>
     </main>
